// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PriceChart /> renders component with error 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PriceChart
    getPriceChartData={[Function]}
    pricechart={
      Array [
        Array [
          1533708000000,
          6551.98,
        ],
      ]
    }
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(observable): [Function],
        },
        "unsubscribe": [Function],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="pricechart__item"
      >
        <select
          className="pricechart__dropdown"
          onChange={[Function]}
        >
          <option
            className="pricechart__dropdown-item"
            name="BTC"
            value="BTC"
          >
            BTC
          </option>
          <option
            className="pricechart__dropdown-item"
            name="ETH"
            value="ETH"
          >
            ETH
          </option>
        </select>
        <div
          className="pricechart__item"
        >
          <div
            className="pricechart__item"
            id="container"
          />
        </div>
      </div>,
      "className": "pricechart__chart",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <select
            className="pricechart__dropdown"
            onChange={[Function]}
          >
            <option
              className="pricechart__dropdown-item"
              name="BTC"
              value="BTC"
            >
              BTC
            </option>
            <option
              className="pricechart__dropdown-item"
              name="ETH"
              value="ETH"
            >
              ETH
            </option>
          </select>,
          <div
            className="pricechart__item"
          >
            <div
              className="pricechart__item"
              id="container"
            />
          </div>,
        ],
        "className": "pricechart__item",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <option
                className="pricechart__dropdown-item"
                name="BTC"
                value="BTC"
              >
                BTC
              </option>,
              <option
                className="pricechart__dropdown-item"
                name="ETH"
                value="ETH"
              >
                ETH
              </option>,
            ],
            "className": "pricechart__dropdown",
            "onChange": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "price-chart0",
              "nodeType": "host",
              "props": Object {
                "children": "BTC",
                "className": "pricechart__dropdown-item",
                "name": "BTC",
                "value": "BTC",
              },
              "ref": null,
              "rendered": "BTC",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": "price-chart1",
              "nodeType": "host",
              "props": Object {
                "children": "ETH",
                "className": "pricechart__dropdown-item",
                "name": "ETH",
                "value": "ETH",
              },
              "ref": null,
              "rendered": "ETH",
              "type": "option",
            },
          ],
          "type": "select",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="pricechart__item"
              id="container"
            />,
            "className": "pricechart__item",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "pricechart__item",
              "id": "container",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="pricechart__item"
        >
          <select
            className="pricechart__dropdown"
            onChange={[Function]}
          >
            <option
              className="pricechart__dropdown-item"
              name="BTC"
              value="BTC"
            >
              BTC
            </option>
            <option
              className="pricechart__dropdown-item"
              name="ETH"
              value="ETH"
            >
              ETH
            </option>
          </select>
          <div
            className="pricechart__item"
          >
            <div
              className="pricechart__item"
              id="container"
            />
          </div>
        </div>,
        "className": "pricechart__chart",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <select
              className="pricechart__dropdown"
              onChange={[Function]}
            >
              <option
                className="pricechart__dropdown-item"
                name="BTC"
                value="BTC"
              >
                BTC
              </option>
              <option
                className="pricechart__dropdown-item"
                name="ETH"
                value="ETH"
              >
                ETH
              </option>
            </select>,
            <div
              className="pricechart__item"
            >
              <div
                className="pricechart__item"
                id="container"
              />
            </div>,
          ],
          "className": "pricechart__item",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <option
                  className="pricechart__dropdown-item"
                  name="BTC"
                  value="BTC"
                >
                  BTC
                </option>,
                <option
                  className="pricechart__dropdown-item"
                  name="ETH"
                  value="ETH"
                >
                  ETH
                </option>,
              ],
              "className": "pricechart__dropdown",
              "onChange": [Function],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "price-chart0",
                "nodeType": "host",
                "props": Object {
                  "children": "BTC",
                  "className": "pricechart__dropdown-item",
                  "name": "BTC",
                  "value": "BTC",
                },
                "ref": null,
                "rendered": "BTC",
                "type": "option",
              },
              Object {
                "instance": null,
                "key": "price-chart1",
                "nodeType": "host",
                "props": Object {
                  "children": "ETH",
                  "className": "pricechart__dropdown-item",
                  "name": "ETH",
                  "value": "ETH",
                },
                "ref": null,
                "rendered": "ETH",
                "type": "option",
              },
            ],
            "type": "select",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="pricechart__item"
                id="container"
              />,
              "className": "pricechart__item",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "pricechart__item",
                "id": "container",
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<PriceChart /> renders empty component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PriceChart
    getPriceChartData={[Function]}
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(observable): [Function],
        },
        "unsubscribe": [Function],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="pricechart__item"
      >
        <select
          className="pricechart__dropdown"
          onChange={[Function]}
        >
          <option
            className="pricechart__dropdown-item"
            name="BTC"
            value="BTC"
          >
            BTC
          </option>
          <option
            className="pricechart__dropdown-item"
            name="ETH"
            value="ETH"
          >
            ETH
          </option>
        </select>
        <div
          className="pricechart__item"
        >
          <div
            className="pricechart__item"
            id="container"
          />
        </div>
      </div>,
      "className": "pricechart__chart",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <select
            className="pricechart__dropdown"
            onChange={[Function]}
          >
            <option
              className="pricechart__dropdown-item"
              name="BTC"
              value="BTC"
            >
              BTC
            </option>
            <option
              className="pricechart__dropdown-item"
              name="ETH"
              value="ETH"
            >
              ETH
            </option>
          </select>,
          <div
            className="pricechart__item"
          >
            <div
              className="pricechart__item"
              id="container"
            />
          </div>,
        ],
        "className": "pricechart__item",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <option
                className="pricechart__dropdown-item"
                name="BTC"
                value="BTC"
              >
                BTC
              </option>,
              <option
                className="pricechart__dropdown-item"
                name="ETH"
                value="ETH"
              >
                ETH
              </option>,
            ],
            "className": "pricechart__dropdown",
            "onChange": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "price-chart0",
              "nodeType": "host",
              "props": Object {
                "children": "BTC",
                "className": "pricechart__dropdown-item",
                "name": "BTC",
                "value": "BTC",
              },
              "ref": null,
              "rendered": "BTC",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": "price-chart1",
              "nodeType": "host",
              "props": Object {
                "children": "ETH",
                "className": "pricechart__dropdown-item",
                "name": "ETH",
                "value": "ETH",
              },
              "ref": null,
              "rendered": "ETH",
              "type": "option",
            },
          ],
          "type": "select",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="pricechart__item"
              id="container"
            />,
            "className": "pricechart__item",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "pricechart__item",
              "id": "container",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="pricechart__item"
        >
          <select
            className="pricechart__dropdown"
            onChange={[Function]}
          >
            <option
              className="pricechart__dropdown-item"
              name="BTC"
              value="BTC"
            >
              BTC
            </option>
            <option
              className="pricechart__dropdown-item"
              name="ETH"
              value="ETH"
            >
              ETH
            </option>
          </select>
          <div
            className="pricechart__item"
          >
            <div
              className="pricechart__item"
              id="container"
            />
          </div>
        </div>,
        "className": "pricechart__chart",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <select
              className="pricechart__dropdown"
              onChange={[Function]}
            >
              <option
                className="pricechart__dropdown-item"
                name="BTC"
                value="BTC"
              >
                BTC
              </option>
              <option
                className="pricechart__dropdown-item"
                name="ETH"
                value="ETH"
              >
                ETH
              </option>
            </select>,
            <div
              className="pricechart__item"
            >
              <div
                className="pricechart__item"
                id="container"
              />
            </div>,
          ],
          "className": "pricechart__item",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <option
                  className="pricechart__dropdown-item"
                  name="BTC"
                  value="BTC"
                >
                  BTC
                </option>,
                <option
                  className="pricechart__dropdown-item"
                  name="ETH"
                  value="ETH"
                >
                  ETH
                </option>,
              ],
              "className": "pricechart__dropdown",
              "onChange": [Function],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "price-chart0",
                "nodeType": "host",
                "props": Object {
                  "children": "BTC",
                  "className": "pricechart__dropdown-item",
                  "name": "BTC",
                  "value": "BTC",
                },
                "ref": null,
                "rendered": "BTC",
                "type": "option",
              },
              Object {
                "instance": null,
                "key": "price-chart1",
                "nodeType": "host",
                "props": Object {
                  "children": "ETH",
                  "className": "pricechart__dropdown-item",
                  "name": "ETH",
                  "value": "ETH",
                },
                "ref": null,
                "rendered": "ETH",
                "type": "option",
              },
            ],
            "type": "select",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="pricechart__item"
                id="container"
              />,
              "className": "pricechart__item",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "pricechart__item",
                "id": "container",
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<PriceChart /> renders the component 1`] = `
Array [
  Array [
    Object {
      "chart": Object {
        "backgroundColor": "#EEF2F5",
        "style": Object {
          "fontFamily": "'Unica One', sans-serif",
        },
      },
      "colors": Array [
        "#30AD63",
      ],
      "exporting": Object {
        "enabled": false,
      },
      "navigator": Object {
        "enabled": false,
      },
      "scrollbar": Object {
        "enabled": false,
      },
      "subtitle": Object {
        "style": Object {
          "color": "#E0E0E3",
          "textTransform": "uppercase",
        },
      },
      "xAxis": Object {
        "endOnTick": true,
        "gridLineWidth": 0,
        "labels": Object {
          "enabled": true,
        },
        "lineWidth": 0,
        "minorGridLineWidth": 0,
        "tickWidth": 0,
        "type": "datetime",
      },
      "yAxis": Object {
        "gridLineColor": "white",
        "labels": Object {
          "align": "left",
          "style": Object {
            "color": "gray",
          },
        },
      },
    },
  ],
]
`;

exports[`<PriceChart /> renders the component 2`] = `
Array [
  Array [
    "container",
    Object {
      "rangeSelector": Object {
        "align": "right",
        "allButtonsEnabled": true,
        "buttons": Array [
          Object {
            "count": 60,
            "dataGrouping": Object {
              "forced": true,
              "units": Array [
                Array [
                  "minute",
                  Array [
                    1,
                  ],
                ],
              ],
            },
            "events": Object {
              "click": [Function],
            },
            "text": "1m",
            "type": "minute",
          },
          Object {
            "count": 6,
            "dataGrouping": Object {
              "forced": true,
              "units": Array [
                Array [
                  "minute",
                  Array [
                    30,
                  ],
                ],
              ],
            },
            "events": Object {
              "click": [Function],
            },
            "text": "6h",
            "type": "hour",
          },
          Object {
            "count": 1,
            "dataGrouping": Object {
              "enabled": true,
              "forced": false,
              "units": Array [
                Array [
                  "hour",
                  Array [
                    4,
                  ],
                ],
              ],
            },
            "events": Object {
              "click": [Function],
            },
            "text": "1M",
            "type": "month",
          },
          Object {
            "count": 3,
            "dataGrouping": Object {
              "enabled": true,
              "forced": true,
              "units": Array [
                Array [
                  "day",
                  Array [
                    1,
                  ],
                ],
              ],
            },
            "events": Object {
              "click": [Function],
            },
            "text": "3M",
            "type": "month",
          },
        ],
        "inputEnabled": false,
        "selected": 3,
      },
      "series": Array [
        Object {
          "data": Array [
            Array [
              1533708000000,
              6551.98,
            ],
          ],
          "enableMouseTracking": true,
          "name": "ETH",
          "tooltip": Object {
            "valueDecimals": 2,
          },
        },
      ],
      "tooltip": Object {
        "animation": true,
        "backgroundColor": "#eceeef",
        "shadow": true,
      },
    },
  ],
  Array [
    "container",
    Object {
      "rangeSelector": Object {
        "align": "right",
        "allButtonsEnabled": true,
        "buttons": Array [
          Object {
            "count": 60,
            "dataGrouping": Object {
              "forced": true,
              "units": Array [
                Array [
                  "minute",
                  Array [
                    1,
                  ],
                ],
              ],
            },
            "events": Object {
              "click": [Function],
            },
            "text": "1m",
            "type": "minute",
          },
          Object {
            "count": 6,
            "dataGrouping": Object {
              "forced": true,
              "units": Array [
                Array [
                  "minute",
                  Array [
                    30,
                  ],
                ],
              ],
            },
            "events": Object {
              "click": [Function],
            },
            "text": "6h",
            "type": "hour",
          },
          Object {
            "count": 1,
            "dataGrouping": Object {
              "enabled": true,
              "forced": false,
              "units": Array [
                Array [
                  "hour",
                  Array [
                    4,
                  ],
                ],
              ],
            },
            "events": Object {
              "click": [Function],
            },
            "text": "1M",
            "type": "month",
          },
          Object {
            "count": 3,
            "dataGrouping": Object {
              "enabled": true,
              "forced": true,
              "units": Array [
                Array [
                  "day",
                  Array [
                    1,
                  ],
                ],
              ],
            },
            "events": Object {
              "click": [Function],
            },
            "text": "3M",
            "type": "month",
          },
        ],
        "inputEnabled": false,
        "selected": 3,
      },
      "series": Array [
        Object {
          "data": Array [
            Array [
              1533708000000,
              6551.98,
            ],
          ],
          "enableMouseTracking": true,
          "name": "ETH",
          "tooltip": Object {
            "valueDecimals": 2,
          },
        },
      ],
      "tooltip": Object {
        "animation": true,
        "backgroundColor": "#eceeef",
        "shadow": true,
      },
    },
  ],
]
`;

exports[`<PriceChart /> renders the component 3`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PriceChart
    getPriceChartData={[Function]}
    pricechart={
      Array [
        Array [
          1533708000000,
          6551.98,
        ],
      ]
    }
    store={
      Object {
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      }
    }
    storeSubscription={
      Subscription {
        "listeners": Object {
          "clear": [Function],
          "get": [Function],
          "notify": [Function],
          "subscribe": [Function],
        },
        "onStateChange": [Function],
        "parentSub": undefined,
        "store": Object {
          "dispatch": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
          Symbol(observable): [Function],
        },
        "unsubscribe": [Function],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="pricechart__item"
      >
        <select
          className="pricechart__dropdown"
          onChange={[Function]}
        >
          <option
            className="pricechart__dropdown-item"
            name="BTC"
            value="BTC"
          >
            BTC
          </option>
          <option
            className="pricechart__dropdown-item"
            name="ETH"
            value="ETH"
          >
            ETH
          </option>
        </select>
        <div
          className="pricechart__item"
        >
          <div
            className="pricechart__item"
            id="container"
          />
        </div>
      </div>,
      "className": "pricechart__chart",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <select
            className="pricechart__dropdown"
            onChange={[Function]}
          >
            <option
              className="pricechart__dropdown-item"
              name="BTC"
              value="BTC"
            >
              BTC
            </option>
            <option
              className="pricechart__dropdown-item"
              name="ETH"
              value="ETH"
            >
              ETH
            </option>
          </select>,
          <div
            className="pricechart__item"
          >
            <div
              className="pricechart__item"
              id="container"
            />
          </div>,
        ],
        "className": "pricechart__item",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <option
                className="pricechart__dropdown-item"
                name="BTC"
                value="BTC"
              >
                BTC
              </option>,
              <option
                className="pricechart__dropdown-item"
                name="ETH"
                value="ETH"
              >
                ETH
              </option>,
            ],
            "className": "pricechart__dropdown",
            "onChange": [Function],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "price-chart0",
              "nodeType": "host",
              "props": Object {
                "children": "BTC",
                "className": "pricechart__dropdown-item",
                "name": "BTC",
                "value": "BTC",
              },
              "ref": null,
              "rendered": "BTC",
              "type": "option",
            },
            Object {
              "instance": null,
              "key": "price-chart1",
              "nodeType": "host",
              "props": Object {
                "children": "ETH",
                "className": "pricechart__dropdown-item",
                "name": "ETH",
                "value": "ETH",
              },
              "ref": null,
              "rendered": "ETH",
              "type": "option",
            },
          ],
          "type": "select",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="pricechart__item"
              id="container"
            />,
            "className": "pricechart__item",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "className": "pricechart__item",
              "id": "container",
            },
            "ref": null,
            "rendered": null,
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="pricechart__item"
        >
          <select
            className="pricechart__dropdown"
            onChange={[Function]}
          >
            <option
              className="pricechart__dropdown-item"
              name="BTC"
              value="BTC"
            >
              BTC
            </option>
            <option
              className="pricechart__dropdown-item"
              name="ETH"
              value="ETH"
            >
              ETH
            </option>
          </select>
          <div
            className="pricechart__item"
          >
            <div
              className="pricechart__item"
              id="container"
            />
          </div>
        </div>,
        "className": "pricechart__chart",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <select
              className="pricechart__dropdown"
              onChange={[Function]}
            >
              <option
                className="pricechart__dropdown-item"
                name="BTC"
                value="BTC"
              >
                BTC
              </option>
              <option
                className="pricechart__dropdown-item"
                name="ETH"
                value="ETH"
              >
                ETH
              </option>
            </select>,
            <div
              className="pricechart__item"
            >
              <div
                className="pricechart__item"
                id="container"
              />
            </div>,
          ],
          "className": "pricechart__item",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <option
                  className="pricechart__dropdown-item"
                  name="BTC"
                  value="BTC"
                >
                  BTC
                </option>,
                <option
                  className="pricechart__dropdown-item"
                  name="ETH"
                  value="ETH"
                >
                  ETH
                </option>,
              ],
              "className": "pricechart__dropdown",
              "onChange": [Function],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": "price-chart0",
                "nodeType": "host",
                "props": Object {
                  "children": "BTC",
                  "className": "pricechart__dropdown-item",
                  "name": "BTC",
                  "value": "BTC",
                },
                "ref": null,
                "rendered": "BTC",
                "type": "option",
              },
              Object {
                "instance": null,
                "key": "price-chart1",
                "nodeType": "host",
                "props": Object {
                  "children": "ETH",
                  "className": "pricechart__dropdown-item",
                  "name": "ETH",
                  "value": "ETH",
                },
                "ref": null,
                "rendered": "ETH",
                "type": "option",
              },
            ],
            "type": "select",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="pricechart__item"
                id="container"
              />,
              "className": "pricechart__item",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "className": "pricechart__item",
                "id": "container",
              },
              "ref": null,
              "rendered": null,
              "type": "div",
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
